# lapwing

./: .gitignore  .gitmodules  CMakeLists.txt
include/: lapwing.h
libraries/header_libs/: CMakeLists.txt
src/: FileWriter.cpp  Main.cpp  endian.cpp  endian.h  file_utils.cpp  file_utils.h  hasher.cpp  hasher.h  lapwing.cpp  lapwing.h  lz4.c  lz4.h  reader.cpp  reader.h  writer.cpp  writer.h
